--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "proxy": "http://localhost:8000"
 }
