--- a/package.json
+++ b/package.json
@@ -18,6 +18,5 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0"
   },
-  "license": "MIT",
-  "proxy": "http://localhost:8000"
+  "license": "MIT"
 }
